# sy-visual-logger

./: .gitmodules  CMakeLists.txt  README.md  apt-install.sh  build.sh
daemon/: CMakeLists.txt  daemon.c  daemon.h  ringbuffer.c  ringbuffer.h
testapp/: CMakeLists.txt  test1.c  test2.c
webgui/: README.md  angular.json  package-lock.json  package.json
webgui/src/: index.html
webgui/src/app/: app.component.html  app.component.ts  app.module.ts  bgserv.service.spec.ts  bgserv.service.ts  dbg-session.ts  log.service.ts  ws-conn.service.spec.ts  ws-conn.service.ts
webgui/src/app/dbg-session/: dbg-session.component.html  dbg-session.component.ts
webgui/src/app/log/: log.component.html  log.component.ts
webgui/src/app/mainlist/: mainlist.component.ts
webgui/src/app/sessionlist/: sessionlist.component.html  sessionlist.component.ts
